<resources>
    <string name="app_name">Cash Register Application</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="product_type">Product Type</string>
    <string name="total">Total</string>
    <string name="buy">Buy</string>
    <string name="quantity">Quantity</string>
    <string name="manager">Manager</string>
    <string name="history">History</string>
    <string name="restock">Restock</string>
    <string name="purchase_detail">Purchase Detail</string>
    <string name="product_name">Product Name</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="add_new_product">Add New Product</string>
    <string name="new_product">New Product</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
</resources>